# demo_bevy_editor_structure

./: .gitignore  Cargo.toml  README.md
bevy/: bevy.toml
exe_editor/: Cargo.toml
exe_editor/src/: library.rs  main.rs  player.rs  winit_hack.rs
exe_game/: Cargo.toml
exe_game/src/: main.rs
lib_game/: Cargo.toml
lib_game/src/: components.rs  lib.rs  plugin.rs  registration.rs
lib_game_inner/: Cargo.toml
lib_game_inner/src/: components.rs  lib.rs  registration.rs
lib_game_outer/: Cargo.toml
lib_game_outer/src/: components.rs  lib.rs
