[workspace]
resolver = "2"
members = [
    "exe_editor",
    "exe_game",
    "lib_game",
]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.17.2", features = ["async-io"] }
bevy_egui = { version = "0.38.1" }
toml = { version = "0.9" }
libloading = { version = "0.9" }

lib_game = { path = "lib_game" }
