[workspace]
resolver = "2"
members = [
    "exe_editor",
    "exe_game",
    "lib_game_outer",
    "lib_game_inner",
]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.17.2", features = ["async-io"] }
bevy_egui = { version = "0.38.1" }
toml = { version = "0.9" }
libloading = { version = "0.9" }
inventory = { version = "0.3" }

lib_game_outer = { path = "lib_game_outer" }
lib_game_inner = { path = "lib_game_inner" }
