[workspace]
resolver = "2"
members = [
    "exe_editor",
    "exe_game",
    "lib_game",
]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.18", features = ["async-io"] }
###bevy_egui = { version = "0.39" }
bevy_egui = { path = "vendored/bevy_egui" }
toml = { version = "0.9" }
libloading = { version = "0.9" }
inventory = { version = "0.3" }

lib_game = { path = "lib_game" }

bevy_winit = { path = "vendored/bevy_winit" }
