[package]
name = "exe_editor"
version = "0.1.0"
edition = "2024"

[features]
default = ["static"]
dynamic = ["dep:libloading"]
static = ["dep:lib_game"]

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
toml = { workspace = true }

lib_game = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
