[package]
name = "exe_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
toml = { workspace = true }

libloading = { workspace = true }
bevy_winit = { workspace = true }

winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
